prevent overflow on low screen width

--- a/superblock-goho/superblock-goho.css
+++ b/superblock-goho/superblock-goho.css
@@ -24,7 +24,7 @@ h2.intermediate {
     border-width: 0.12em;
     border-radius: 5px;
     border-style: solid;
-    max-width: 45%;
+    max-width: 53%;
     margin: auto;
     margin-bottom: 3%;
 }
